[tool.poetry]
name = "hyp-mod-python"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["Juan Roussilian <juancruzroussilian9@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage="https://github.com/juan-roussilian/hyp-mod-python"
repository = "https://github.com/juan-roussilian/hyp-mod-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"

[tool.poetry.scripts]
hyp-mod-python = "hyp_mod_python.console:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
